
- Added average fluxes to `NumericalFlux` (formerly `RiemannSolver`)
  and `FluxFunction`.

- Added component-wise upwinded flux (`ComponentwiseUpwindFlux`).

- Added support for H(div) spaces in class QuadratureInterpolator. For now, only
  (vector) VALUES, (vector) PHYSICAL_VALUES, and PHYSICAL_MAGNITUDES evaluations
  are implemented. [PR #4669]

Meshing improvements
--------------------
- Added native AD support for numerous TMOP metrics that didn't have first or
  second derivative implementations.

- The ExodusII reader now handles pyramid and wedge element types. Mixed meshes
  are also supported.

- Added support for nonuniform anisotropic (nonconforming) mesh refinement with
  arbitrary spacing in each direction, for quadrilateral (2D) and hexahedral
  (3D) meshes. This enables in particular 3:1 refinement, as demonstrated in the
  new meshing miniapp ref321.

New and updated examples and miniapps
-------------------------------------
- Added miniapps to demonstrate the H(div) and H(curl) NURBS elements.

- Added an MFEM example for the eikonal equation. This new solver is based on
  the proximal Galerkin method introduced by Keith and Surowiec.

- Added a new toy miniapp that animates an interesting fidget spiral cone toy.
  See miniapps/toys/spiral.cpp.

- Added a command line option to all miniapps (`-p` or `--send-port`) for
  specifying the GLVis server socket port (19916 by default).

GPU computing
-------------
- Added support for GPU-accelerated batched linear algebra (using cuBLAS,
  hipBLAS, MAGMA, or native MFEM functionality) through the BatchedLinAlg class.

- A new GPU kernel dispatch mechanism was introduced. Users can instantiate
  specialized kernels for specific combinations of (for example) polynomial
  degree and number of quadrature points using
  `DiffusionIntegrator::AddSpecialization` and
  `MassIntegrator::AddSpecialization` (this functionality may be added to more
  integrators in the future).
